@@ -9,6 +9,7 @@
 	(debbugs-emacs): Use it.
 	(debbugs-toggle-sort): Make sorting work again.
 	(debbugs-toggle-sort): Use `debbugs-current-id'.
+	(debbugs-toggle-sort): Don't move point around so much.
 
 2011-07-03  Michael Albinus  <michael.albinus@gmx.de>
 
